2005-12-19 arne

	* per default USE_NAMESPACE is 1 now if you don't define it
	* some more deprecated functions in CDrawContext
	* moved VSTGUIEditorInterface and CDropTarget into VSTGUI namespace

2005-12-16 arne

	* CControl::getTag() is virtual now
	* fixed some stuff with CDrawContext inside the DEPRECATED functions
	* added some more documentation
	* reorganized GDI+ initialization

2005-12-11 arne

	* moved mouse methods from CDrawContext to CFrame where it makes sense
	* added kDoubleClick to button state, so that you don't need the old way to call waitDoubleClick
	* more GDI+ stuff (it's much faster now)
	* removed tooltip handling
	* added mouse observer interface to CFrame (tooltips could be handled this way in a more generic fashion, see the CTooltipSupport class)
	* renamed CReferenceCounter to CBaseObject and moved the notify method to it
	* reorganized doxygen documentation
	* changed implementation of CView::attached and CView::removed. If you overwrite them, always call the super class implementation also. 
		And because of this and the way modal views are handled CSplashScreen needs to be rewritten (not done yet).
	* added check for unreleased CViews when DEBUG is set

2005-11-22 arne

	* new handling of deprecated methods (on mac osx with gcc you get a warning now when using these methods)
	* declared more methods as deprecated
	* per default deprecated methods are compiled in, you can change this with the macro VSTGUI_ENABLE_DEPRECATED_METHODS=0
	* initial support for Unicode (using UTF8 at the moment)
	* added CView::parentSizeChanged() and CView::getVisibleSize()
	* fix some mouse wheel coordinate errors
	* fix problems with ENABLE_VST_EXTENSION_IN_VSTGUI
	
2005-09-23 arne

	* proper handling of attached and removed calls of CView (if you overwrite them, always call its parents implementation)
	* mac: working again with non composited windows